--- a/kursov_rabota/kursov_rabota/kursov_rabota.csproj
+++ b/kursov_rabota/kursov_rabota/kursov_rabota.csproj
@@ -36,8 +36,12 @@
     <Reference Include="CreateSQLTables">
       <HintPath>..\..\CreateSQLTables\CreateSQLTables\bin\Debug\CreateSQLTables.dll</HintPath>
     </Reference>
-    <Reference Include="SearchMaxID">
+    <Reference Include="SearchMaxID, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\SearchMaxID\SearchMaxID\bin\Debug\SearchMaxID.dll</HintPath>
+    </Reference>
+    <Reference Include="ShipmentLibrary">
+      <HintPath>..\..\ShipmentLibrary\ShipmentLibrary\bin\Debug\ShipmentLibrary.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
