Добавил и подключил классы Клиент и Список клиентов
Добавил классы Клиент и Список клиентов, Подключил к основной программе

--- a/kursov_rabota/kursov_rabota/kursov_rabota.csproj
+++ b/kursov_rabota/kursov_rabota/kursov_rabota.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ClientLibrary">
+      <HintPath>..\..\ClientLibrary\ClientLibrary\bin\Debug\ClientLibrary.dll</HintPath>
+    </Reference>
     <Reference Include="CreateSQLTables">
       <HintPath>..\..\CreateSQLTables\CreateSQLTables\bin\Debug\CreateSQLTables.dll</HintPath>
     </Reference>
