--- a/kursov_rabota/kursov_rabota/kursov_rabota.csproj
+++ b/kursov_rabota/kursov_rabota/kursov_rabota.csproj
@@ -56,7 +56,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.SQLite">
-      <HintPath>..\..\..\..\Project C#\SQLite\System.Data.SQLite.dll</HintPath>
+      <HintPath>..\..\CreateSQLTables\CreateSQLTables\bin\Debug\System.Data.SQLite.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
