--- a/InputList/InputList/InputList.csproj
+++ b/InputList/InputList/InputList.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E82FE045-4977-41EB-A505-F08597D5D4D8}</ProjectGuid>
+    <ProjectGuid>{0F194BAB-D591-45C0-9E50-6771E5F4B621}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ListsFilling</RootNamespace>
-    <AssemblyName>ListsFilling</AssemblyName>
+    <RootNamespace>InputList</RootNamespace>
+    <AssemblyName>InputList</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
