Сделал выгрузку спиков в SQL
Сделал выгрузку списков в таблицы, для этого создал класс, в котором
таблицы удаляются и создал класс, где прописано как выгружать в SQL
таблицы

--- a/kursov_rabota/kursov_rabota/kursov_rabota.csproj
+++ b/kursov_rabota/kursov_rabota/kursov_rabota.csproj
@@ -40,8 +40,14 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\CreateSQLTables\CreateSQLTables\bin\Debug\CreateSQLTables.dll</HintPath>
     </Reference>
+    <Reference Include="DeleteSQLTables">
+      <HintPath>..\..\DeleteSQLTables\DeleteSQLTables\bin\Debug\DeleteSQLTables.dll</HintPath>
+    </Reference>
     <Reference Include="InputList">
       <HintPath>..\..\InputList\InputList\bin\Debug\InputList.dll</HintPath>
+    </Reference>
+    <Reference Include="OutputList">
+      <HintPath>..\..\OutputList\OutputList\bin\Debug\OutputList.dll</HintPath>
     </Reference>
     <Reference Include="ProviderLibrary">
       <HintPath>..\..\ProviderLibrary\ProviderLibrary\bin\Debug\ProviderLibrary.dll</HintPath>
