Исправил баг с удалением таблиц
Исправил баг с удалением таблиц, теперь удаляются не таблицы, а данные
внутри

--- a/kursov_rabota/kursov_rabota/kursov_rabota.csproj
+++ b/kursov_rabota/kursov_rabota/kursov_rabota.csproj
@@ -40,8 +40,8 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\CreateSQLTables\CreateSQLTables\bin\Debug\CreateSQLTables.dll</HintPath>
     </Reference>
-    <Reference Include="DeleteSQLTables">
-      <HintPath>..\..\DeleteSQLTables\DeleteSQLTables\bin\Debug\DeleteSQLTables.dll</HintPath>
+    <Reference Include="DeleteFromSQLTables">
+      <HintPath>..\..\DeleteFromSQLTables\DeleteFromSQLTables\bin\Debug\DeleteFromSQLTables.dll</HintPath>
     </Reference>
     <Reference Include="InputList">
       <HintPath>..\..\InputList\InputList\bin\Debug\InputList.dll</HintPath>
