--- a/DeleteFromSQLTables/DeleteFromSQLTables/DeleteFromSQLTables.csproj
+++ b/DeleteFromSQLTables/DeleteFromSQLTables/DeleteFromSQLTables.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{ED7AF53A-0849-4395-8AF1-A5A656989DA6}</ProjectGuid>
+    <ProjectGuid>{DF8727F3-77F6-4BDA-8997-25D683E73866}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DeleteSQLTables</RootNamespace>
-    <AssemblyName>DeleteSQLTables</AssemblyName>
+    <RootNamespace>DeleteFromSQLTables</RootNamespace>
+    <AssemblyName>DeleteFromSQLTables</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
