--- a/kursov_rabota/kursov_rabota/kursov_rabota.csproj
+++ b/kursov_rabota/kursov_rabota/kursov_rabota.csproj
@@ -81,11 +81,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CreateScreen.cs">
+    <Compile Include="CreateUpdateDeleteScreen.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="CreateScreen.Designer.cs">
-      <DependentUpon>CreateScreen.cs</DependentUpon>
+    <Compile Include="CreateUpdateDeleteScreen.Designer.cs">
+      <DependentUpon>CreateUpdateDeleteScreen.cs</DependentUpon>
     </Compile>
     <Compile Include="HalfWayScreen.cs">
       <SubType>Form</SubType>
@@ -101,8 +101,8 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="CreateScreen.resx">
-      <DependentUpon>CreateScreen.cs</DependentUpon>
+    <EmbeddedResource Include="CreateUpdateDeleteScreen.resx">
+      <DependentUpon>CreateUpdateDeleteScreen.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="HalfWayScreen.resx">
       <DependentUpon>HalfWayScreen.cs</DependentUpon>
