--- a/InputList/InputList/InputList.csproj
+++ b/InputList/InputList/InputList.csproj
@@ -56,6 +56,9 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="XMLSerializator">
+      <HintPath>..\..\XMLSerializator\XMLSerializator\bin\Debug\XMLSerializator.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
