Меню "Работа с БД" : Завершено
Закончил работу над меню "Работа с БД"

--- a/kursov_rabota/kursov_rabota/kursov_rabota.csproj
+++ b/kursov_rabota/kursov_rabota/kursov_rabota.csproj
@@ -93,6 +93,7 @@
     <Compile Include="CreateUpdateDeleteScreen.Designer.cs">
       <DependentUpon>CreateUpdateDeleteScreen.cs</DependentUpon>
     </Compile>
+    <Compile Include="Enums.cs" />
     <Compile Include="HalfWayScreen.cs">
       <SubType>Form</SubType>
     </Compile>
