Соединил основную программу и моздание товарной накладной

--- a/PDFWork/PDFWork/PDFWork.csproj
+++ b/PDFWork/PDFWork/PDFWork.csproj
@@ -33,6 +33,9 @@
     <Reference Include="itextsharp">
       <HintPath>..\..\OtherLibrary\itextsharp.dll</HintPath>
     </Reference>
+    <Reference Include="PurchaseHistoryLibrary">
+      <HintPath>..\..\PurchaseHistoryLibrary\PurchaseHistoryLibrary\bin\Debug\PurchaseHistoryLibrary.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
