--- a/kursov_rabota/kursov_rabota/kursov_rabota.csproj
+++ b/kursov_rabota/kursov_rabota/kursov_rabota.csproj
@@ -52,6 +52,9 @@
     <Reference Include="OutputList">
       <HintPath>..\..\OutputList\OutputList\bin\Debug\OutputList.dll</HintPath>
     </Reference>
+    <Reference Include="PDFWork">
+      <HintPath>..\..\PDFWork\PDFWork\bin\Debug\PDFWork.dll</HintPath>
+    </Reference>
     <Reference Include="ProviderLibrary">
       <HintPath>..\..\ProviderLibrary\ProviderLibrary\bin\Debug\ProviderLibrary.dll</HintPath>
     </Reference>
