Сделал создание отчета по клиентам

--- a/PDFWork/PDFWork/PDFWork.csproj
+++ b/PDFWork/PDFWork/PDFWork.csproj
@@ -30,14 +30,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FormatDateLibrary">
+      <HintPath>..\..\kursov_rabota\FormatDateLibrary\bin\Debug\FormatDateLibrary.dll</HintPath>
+    </Reference>
     <Reference Include="itextsharp">
       <HintPath>..\..\OtherLibrary\itextsharp.dll</HintPath>
-    </Reference>
-    <Reference Include="PurchaseHistoryLibrary">
-      <HintPath>..\..\PurchaseHistoryLibrary\PurchaseHistoryLibrary\bin\Debug\PurchaseHistoryLibrary.dll</HintPath>
-    </Reference>
-    <Reference Include="ShipmentLibrary">
-      <HintPath>..\..\ShipmentLibrary\ShipmentLibrary\bin\Debug\ShipmentLibrary.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
