--- a/kursov_rabota/FormatDateLibrary/FormatDateLibrary.csproj
+++ b/kursov_rabota/FormatDateLibrary/FormatDateLibrary.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{872A101B-03FB-4413-873C-60CE36E1D460}</ProjectGuid>
+    <ProjectGuid>{7E2309B9-277A-4225-9007-14AAEE5395FB}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ReportLibrary</RootNamespace>
-    <AssemblyName>ReportLibrary</AssemblyName>
+    <RootNamespace>FormatDateLibrary</RootNamespace>
+    <AssemblyName>FormatDateLibrary</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,18 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ClientLibrary">
-      <HintPath>..\..\ClientLibrary\ClientLibrary\bin\Debug\ClientLibrary.dll</HintPath>
-    </Reference>
-    <Reference Include="PDFWork">
-      <HintPath>..\..\PDFWork\PDFWork\bin\Debug\PDFWork.dll</HintPath>
-    </Reference>
-    <Reference Include="PurchaseHistoryLibrary">
-      <HintPath>..\..\PurchaseHistoryLibrary\PurchaseHistoryLibrary\bin\Debug\PurchaseHistoryLibrary.dll</HintPath>
-    </Reference>
-    <Reference Include="ShipmentLibrary">
-      <HintPath>..\..\ShipmentLibrary\ShipmentLibrary\bin\Debug\ShipmentLibrary.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -52,7 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ReportLibrary.cs" />
+    <Compile Include="FormatDateLibrary.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
